Language: #add missing, #remove deprecated and #fix legacy language terms (assets/locales update from commands)

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -22965,14 +22965,14 @@ msgstr ""
 msgid "Explain in this box why you want your account deleted"
 msgstr "Erklären Sie in diesem Feld, warum Sie Ihr Konto löschen möchten"
 
-msgid "You can ask below for your legal agreement to be deleted or your account to be deleted.</br>In the case of the legal agreement, once deleted you will have to accept it again on your next login to be able to access the platform and recover your access, because we cannot reasonably at the same time give you a personal environment and not treat your personal data.</br>In the case of an account deletion, your account will be deleted along with all of your course subscriptions and all the information related to your account. Please select the corresponding option with care. In both cases, one of our administrators will review your request before it is effective, to avoid any misunderstanding and definitive loss of your data."
+msgid "You can ask below for your legal agreement to be deleted or your account to be deleted.<br>In the case of the legal agreement, once deleted you will have to accept it again on your next login to be able to access the platform and recover your access, because we cannot reasonably at the same time give you a personal environment and not treat your personal data.<br>In the case of an account deletion, your account will be deleted along with all of your course subscriptions and all the information related to your account. Please select the corresponding option with care. In both cases, one of our administrators will review your request before it is effective, to avoid any misunderstanding and definitive loss of your data."
 msgstr ""
 "Sie können unten darum bitten, dass Ihre rechtliche Vereinbarung gelöscht "
-"wird oder Ihr Konto gelöscht wird.</br>Im Falle der rechtlichen Vereinbarung "
+"wird oder Ihr Konto gelöscht wird.<br>Im Falle der rechtlichen Vereinbarung "
 "müssen Sie diese nach der Löschung bei Ihrem nächsten Login erneut "
 "akzeptieren, um Zugang zur Plattform zu erhalten und Ihren Zugang "
 "wiederherzustellen, da wir Ihnen nicht gleichzeitig ein persönliches Umfeld "
-"bieten und Ihre persönlichen Daten nicht verarbeiten können.</br>Im Falle "
+"bieten und Ihre persönlichen Daten nicht verarbeiten können.<br>Im Falle "
 "einer Kontolöschung wird Ihr Konto zusammen mit all Ihren Kursabonnements "
 "und allen Informationen, die mit Ihrem Konto verbunden sind, gelöscht. Bitte "
 "wählen Sie die entsprechende Option sorgfältig aus. In beiden Fällen wird "
