--- a/translations/messages.da.po
+++ b/translations/messages.da.po
@@ -1605,7 +1605,7 @@ msgid "Move the current forum"
 msgstr "Flyt det aktuelle forum"
 
 msgid "Warning ! When you edit the content of a learning object, you may alter the reporting of the course or damage the learning object."
-msgstr "Advarsel!</br> Når du redigerer indholdet i et SCORM-baseret trin, forandrer du evt. læringsstien eller ødelægger det pågældende trin."
+msgstr "Advarsel!<br> Når du redigerer indholdet i et SCORM-baseret trin, forandrer du evt. læringsstien eller ødelægger det pågældende trin."
 
 msgid "Please provide a subject or message"
 msgstr ""
@@ -22788,7 +22788,7 @@ msgstr ""
 msgid "Explain in this box why you want your account deleted"
 msgstr ""
 
-msgid "You can ask below for your legal agreement to be deleted or your account to be deleted.</br>In the case of the legal agreement, once deleted you will have to accept it again on your next login to be able to access the platform and recover your access, because we cannot reasonably at the same time give you a personal environment and not treat your personal data.</br>In the case of an account deletion, your account will be deleted along with all of your course subscriptions and all the information related to your account. Please select the corresponding option with care. In both cases, one of our administrators will review your request before it is effective, to avoid any misunderstanding and definitive loss of your data."
+msgid "You can ask below for your legal agreement to be deleted or your account to be deleted.<br>In the case of the legal agreement, once deleted you will have to accept it again on your next login to be able to access the platform and recover your access, because we cannot reasonably at the same time give you a personal environment and not treat your personal data.<br>In the case of an account deletion, your account will be deleted along with all of your course subscriptions and all the information related to your account. Please select the corresponding option with care. In both cases, one of our administrators will review your request before it is effective, to avoid any misunderstanding and definitive loss of your data."
 msgstr ""
 
 msgid "Personal data protection"
