--- a/translations/messages.nl.po
+++ b/translations/messages.nl.po
@@ -23504,10 +23504,10 @@ msgstr ""
 msgid "Explain in this box why you want your account deleted"
 msgstr "Leg uit in dit vak waarom u uw account wilt verwijderen"
 
-msgid "You can ask below for your legal agreement to be deleted or your account to be deleted.</br>In the case of the legal agreement, once deleted you will have to accept it again on your next login to be able to access the platform and recover your access, because we cannot reasonably at the same time give you a personal environment and not treat your personal data.</br>In the case of an account deletion, your account will be deleted along with all of your course subscriptions and all the information related to your account. Please select the corresponding option with care. In both cases, one of our administrators will review your request before it is effective, to avoid any misunderstanding and definitive loss of your data."
+msgid "You can ask below for your legal agreement to be deleted or your account to be deleted.<br>In the case of the legal agreement, once deleted you will have to accept it again on your next login to be able to access the platform and recover your access, because we cannot reasonably at the same time give you a personal environment and not treat your personal data.<br>In the case of an account deletion, your account will be deleted along with all of your course subscriptions and all the information related to your account. Please select the corresponding option with care. In both cases, one of our administrators will review your request before it is effective, to avoid any misunderstanding and definitive loss of your data."
 msgstr ""
 "U kunt hieronder vragen om uw juridische overeenkomst te laten verwijderen "
-"of om uw account te laten verwijderen.</br>In het geval van de juridische "
+"of om uw account te laten verwijderen.<br>In het geval van de juridische "
 "overeenkomst, zodra deze verwijderd is, moet u deze opnieuw accepteren bij "
 "uw volgende aanmelding om toegang te krijgen tot het platform en uw toegang "
 "te herstellen, omdat we niet redelijkerwijs tegelijkertijd u een "
