--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1052,5 +1052,7 @@
     "You have received a new friend request": "You have received a new friend request",
     "DiagnosticfinalizationmessageTitle": "DiagnosticfinalizationmessageTitle",
     "DiagnosticfinalizationmessageContent": "DiagnosticfinalizationmessageContent",
+    "Events": "Events",
+    "Diagnosis Management": "Diagnosis Management",
     "Contact support": "Contact support"
 }
