Language: #add missing terms in json

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1054,5 +1054,17 @@
     "DiagnosticfinalizationmessageContent": "DiagnosticfinalizationmessageContent",
     "Events": "Events",
     "Diagnosis Management": "Diagnosis Management",
+    "Course description": "Course description",
+    "Learning paths": "Learning paths",
+    "Links": "Links",
+    "Tests": "Tests",
+    "Announcements": "Announcements",
+    "Forum": "Forum",
+    "Surveys": "Surveys",
+    "Wiki": "Wiki",
+    "Glossary": "Glossary",
+    "Notebook": "Notebook",
+    "Attendances": "Attendances",
+    "Course progress": "Course progress",
     "Contact support": "Contact support"
 }
