--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1066,5 +1066,10 @@
     "Notebook": "Notebook",
     "Attendances": "Attendances",
     "Course progress": "Course progress",
+    "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.": "The forum's auto-launch setting is on. Students will be redirected to the forum tool when entering this course.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.": "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to the selected exercise.",
+    "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.": "The learning path auto-launch setting is ON. When learners enter this course, they will be automatically redirected to the learning path marked as auto-launch.",
+    "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.": "The document auto-launch feature configuration is enabled. Learners will be automatically redirected to document tool.",
+    "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.": "The exercises auto-launch feature configuration is enabled. Learners will be automatically redirected to exercise list.",
     "Contact support": "Contact support"
 }
