--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -30397,3 +30397,9 @@ msgstr "En remplissant ce formulaire, vous acceptez que l'éditeur officiel de C
 
 msgid "Please note that you are NOT REQUIRED to fill this form. If you want to remain anonymous, we will lose the opportunity to offer you all the privileges of being a registered portal administrator, but we will respect your decision. Simply leave this form empty and click Next."
 msgstr "Il n'y a AUCUNE OBLIGATION de remplir ce formulaire pour utiliser pleinement Chamilo. Si vous souhaitez rester anonyme, nous perdrons l'opportunité de vous offrir la panoplie complète de privilèges d'être un administrateur de portail enregistré, mais nous respecterons votre décision. Laissez simplement ce formulaire vide et cliquez sur Suivant pour continuer l'installation de Chamilo."
+
+msgid "New folder"
+msgstr "Nouveau dossier"
+
+msgid "No available options"
+msgstr "Aucune option disponible"
