Language: add missing translation in FR and DE to fix specific task in promoted messages - refs BT#22807

--- a/translations/messages.de.po
+++ b/translations/messages.de.po
@@ -30068,3 +30068,6 @@ msgstr "Eintrag"
 
 msgid "Color"
 msgstr "Farbe"
+
+msgid "All messages here are automatically marked as promoted."
+msgstr "Alle Nachrichten hier werden automatisch als offiziell markiert."
