--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -30264,7 +30264,7 @@ msgstr ""
 msgid "You have been enrolled in the course %s for the session %s"
 msgstr ""
 
-msgid "Semicolon (;) delimiter detected. Chamilo 2+ requires comma (,) as the CSV separator. Please export your file again as CSV (comma-separated)."
+msgid "Semicolon (;) delimiter detected. This version of Chamilo requires comma (,) as the CSV separator. Please export your file again as CSV (comma-separated)."
 msgstr ""
 
 msgid "Replication"
