Language: fix terms and add missing ones

--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -30571,3 +30571,9 @@ msgstr "Please contact support with the error details."
 
 msgid "Contact support"
 msgstr "Contact support"
+
+msgid "Skills History"
+msgstr "Skills History"
+
+msgid "Badge"
+msgstr "Badge"
